plants-app/src/components/myPlants/ManagePlants.scss
@import "../../index.scss";
.all-plants {
  .plants-table {
    padding-top: 20px;
    overflow: scroll;
    @include bp-small {
      padding-top: 20px;
    }
    table {
      width: 100%;
      .actions{
        width: 250px;
      }
      th {
        text-align: start;
        padding-bottom: 20px;
        padding-top: 20px;
        color: $gray;
        font-size: 16px;
        font-weight: 600;
        text-transform: uppercase;
      }
      .cell {
        padding-bottom: 14px;
        padding-top: 14px;
        margin-left: 20px;

        .buttons {
          display: flex;
          gap: 10px;
          flex-direction: row;
          justify-content: flex-end;
          padding-right: 20px;
        }
      }
      tbody{
      tr:nth-child(odd) {
        background-color: #f6f5f7;
      }
    }

      .name {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 20px;
        margin-right: 20vw;
        @include bp-small {
          gap: 14px;
        }
        p {
          margin-bottom: 0 !important;
          font-size: 24px;
          font-weight: 500;
          @include bp-small {
            font-size: 18px;
          }
        }
      }
    }
  }
  .plant-image {
    height: 60px;
    width: 60px;
    border-radius: 100%;
    overflow: hidden;
    box-shadow: 0px 0px 8px -4px black;
    @include bp-small {
      height: 40px;
      width: 40px;
    }
    img {
      height: 100%;
      width: 100%;
      object-fit: cover;
    }
  }
}

